--- a/tools.html
+++ b/tools.html
@@ -26,7 +26,7 @@
                     <h3>Click on the tool you need</h3>
                     <div class="tool-list">
                         <ul>
-                            <li><a href="https://bit.ly/3WOsEIh"><img src="img/CA_Reg-removebg-preview.png" alt="CA Reg Icon"> CA Reg</a>
+                            <li><a href="https://bit.ly/3WOsEIh"><img src="CA_Reg-removebg-preview.png" alt="CA Reg Icon"> CA Reg</a>
                             </li>
                             <li><a href="#"><img src="Open_Sales-removebg-preview.png" alt="Open Sales Icon"> Open
                                     Sales</a></li>
