--- a/index.html
+++ b/index.html
@@ -261,16 +261,16 @@
                 <h1 class="contact">Contact</h1>
                 <div class="contact-information">
                   <div class="contact-details-container">
-                    <p class="contact-details">icon +123-456-7890</p>
+                    <p class="contact-details">icon 020 13306058 </p>
                   </div>
                   <div class="email-container">
-                    <p class="email-details">icon info@callpoint.com</p>
+                    <p class="email-details">icon hello@callpoint360.com</p>
                   </div>
                   <div class="address-container">
                     <p class="address-details">icon CallPoint CRM Hub, Gritford Centre,Adjacent Aare Arisekola House, Bashorun Ibadan</p>
                   </div>
                   <div class="website-address">
-                    icon <a class="wwwcallpointcom1" href="http://www.callpoint.com" target="_blank"><span class="wwwcallpointcom2">www.callpoint.com</span></a>
+                    icon <a class="wwwcallpointcom1" href="http://www.callpoint360.com" target="_blank"><span class="wwwcallpointcom2">www.callpoint360.com</span></a>
                   </div>
                 </div>
               </div>
