--- a/tools.html
+++ b/tools.html
@@ -28,7 +28,7 @@
                         <ul>
                             <li><a href="https://bit.ly/3WOsEIh"><img src="CA_Reg-removebg-preview.png" alt="CA Reg Icon"> CA Reg</a>
                             </li>
-                            <li><a href="#"><img src="Open_Sales-removebg-preview.png" alt="Open Sales Icon"> Open
+                            <li><a href="https://bit.ly/3YtN5ve"><img src="Open_Sales-removebg-preview.png" alt="Open Sales Icon"> Open
                                     Sales</a></li>
                             <li><a href="https://bit.ly/46wPZRQ"><img src="Colloect_your_Money_2x-removebg-preview.png" alt="CYM Icon">
                                     CYM</a></li>
