--- a/tools.html
+++ b/tools.html
@@ -47,13 +47,13 @@
 
                 <div class="slider">
                     <img src="2 1.jpg" alt="Woman with Headset 1">
-                    <img class="scan" src="CYMbit.jpeg" alt="CYM scan">
+                    <img class="scan" src="opensalesbit.jpeg" alt="Opensales scan">
                     <img src="4 1.jpg" alt="Woman with Headset 2">
-                    <img class="scan" src="Deploymentbit.jpeg" alt="deployment scan">
+                    <img class="scan" src="CYMbit.jpeg" alt="CYM scan">
                     <img src="27 1.png" alt="Woman with Headset 3">
-                    <img class="scan" src="payoutbit.jpeg" alt="payout scan">
+                    <img class="scan" src="Deploymentbit.jpeg" alt="deployment scan">
                     <img src="Group 3.png" alt="Woman with Headset 4">
-
+                    <img class="scan" src="payoutbit.jpeg" alt="payout scan">
                 </div>
             </div>
         </div>
