associate link rectified

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <a href="#">Features</a>
         <a href="#">About Us</a>
         <a href="#">Services</a>
-        <a href="/Callpoint-main/associate.html">Associate</a>
+        <a href="associate.html">Associate</a>
       </div>
       <div>
         <h3>Resources</h3>
