associate img fixed

--- a/associate.html
+++ b/associate.html
@@ -17,18 +17,18 @@
         <div class="main-content">
             <div class="sidebar">
                 <div class="logo">
-                    <img src="../img/CallPointLogo-removebg-preview.png" alt="CallPoint Logo">
+                    <img src="img/CallPointLogo-removebg-preview.png" alt="CallPoint Logo">
                 </div>
                 <div class="tools">
                     <h2>CA Tools</h2>
                     <h3>Click on the tool you need</h3>
                     <div class="tool-list">
                         <ul>
-                            <li><a href="https://bit.ly/3WOsEIh"><img src="../img/CA_Reg-removebg-preview.png" alt="CA Reg Icon"> CA Reg</a></li>
-                            <li><a href="https://bit.ly/3YtN5ve"><img src="../img/Open_Sales-removebg-preview.png" alt="Open Sales Icon"> Open Sales</a></li>
-                            <li><a href="https://bit.ly/46wPZRQ"><img src="../img/Colloect_your_Money_2x-removebg-preview.png" alt="CYM Icon"> CYM</a></li>
-                            <li><a href="https://bit.ly/3SzEGT3"><img src="../img/Deployment-removebg-preview.png" alt="Deployment Icon"> Deployment</a></li>
-                            <li><a href="https://bit.ly/3Wx0qjw"><img src="../img/Payment-removebg-preview.png" alt="Payment Icon"> Payout</a></li>
+                            <li><a href="https://bit.ly/3WOsEIh"><img src="img/CA_Reg-removebg-preview.png" alt="CA Reg Icon"> CA Reg</a></li>
+                            <li><a href="https://bit.ly/3YtN5ve"><img src="img/Open_Sales-removebg-preview.png" alt="Open Sales Icon"> Open Sales</a></li>
+                            <li><a href="https://bit.ly/46wPZRQ"><img src="img/Colloect_your_Money_2x-removebg-preview.png" alt="CYM Icon"> CYM</a></li>
+                            <li><a href="https://bit.ly/3SzEGT3"><img src="img/Deployment-removebg-preview.png" alt="Deployment Icon"> Deployment</a></li>
+                            <li><a href="https://bit.ly/3Wx0qjw"><img src="img/Payment-removebg-preview.png" alt="Payment Icon"> Payout</a></li>
                         </ul>
                     </div>
                 </div>
@@ -36,14 +36,14 @@
 
             <div class="content">
                 <div class="slider">
-                    <img src="../img/2 1.jpg" alt="Woman with Headset 1">
-                    <img class="scan" src="../img/opensalesbit.jpeg" alt="Opensales scan">
-                    <img src="../img/4 1.jpg" alt="Woman with Headset 2">
-                    <img class="scan" src="../img/CYMbit.jpeg" alt="CYM scan">
-                    <img src="../img/27 1.png" alt="Woman with Headset 3">
-                    <img class="scan" src="../img/Deploymentbit.jpeg" alt="Deployment scan">
-                    <img src="../img/Group 3.png" alt="Woman with Headset 4">
-                    <img class="scan" src="../img/payoutbit.jpeg" alt="Payout scan">
+                    <img src="img/2 1.jpg" alt="Woman with Headset 1">
+                    <img class="scan" src="img/opensalesbit.jpeg" alt="Opensales scan">
+                    <img src="img/4 1.jpg" alt="Woman with Headset 2">
+                    <img class="scan" src="img/CYMbit.jpeg" alt="CYM scan">
+                    <img src="img/27 1.png" alt="Woman with Headset 3">
+                    <img class="scan" src="img/Deploymentbit.jpeg" alt="Deployment scan">
+                    <img src="img/Group 3.png" alt="Woman with Headset 4">
+                    <img class="scan" src="img/payoutbit.jpeg" alt="Payout scan">
                  
                 </div>
             </div>
