--- a/associate.html
+++ b/associate.html
@@ -24,11 +24,12 @@
                     <h3>Click on the tool you need</h3>
                     <div class="tool-list">
                         <ul>
-                            <li><a href="https://bit.ly/3WOsEIh"><img src="img/CA_Reg-removebg-preview.png" alt="CA Reg Icon"> CA Reg</a></li>
-                            <li><a href="https://bit.ly/3YtN5ve"><img src="img/Open_Sales-removebg-preview.png" alt="Open Sales Icon"> Open Sales</a></li>
-                            <li><a href="https://bit.ly/46wPZRQ"><img src="img/Colloect_your_Money_2x-removebg-preview.png" alt="CYM Icon"> CYM</a></li>
-                            <li><a href="https://bit.ly/3SzEGT3"><img src="img/Deployment-removebg-preview.png" alt="Deployment Icon"> Deployment</a></li>
-                            <li><a href="https://bit.ly/3Wx0qjw"><img src="img/Payment-removebg-preview.png" alt="Payment Icon"> Payout</a></li>
+                            <li><a href="https://bit.ly/3WOsEIh"target="_blank"><img src="img/CA_Reg-removebg-preview.png" alt="CA Reg Icon"> CA Reg</a></li>
+                            <li><a href="https://bit.ly/3YtN5ve"target="_blank"><img src="img/Open_Sales-removebg-preview.png" alt="Open Sales Icon"> Open Sales</a></li>
+                            <li><a href="https://bit.ly/46wPZRQ"target="_blank"><img src="img/Colloect_your_Money_2x-removebg-preview.png" alt="CYM Icon"> CYM</a></li>
+                            <li><a href="https://bit.ly/3SzEGT3"target="_blank"><img src="img/Deployment-removebg-preview.png" alt="Deployment Icon"> Deployment</a></li>
+                            <li><a href="https://bit.ly/3Wx0qjw"target="_blank"><img src="img/Payment-removebg-preview.png" alt="Payment Icon"> Payout</a></li>
+                            <li><a href=""target="_blank"><img src="img/download.png" alt="TA Icon"> TA</a></li>
                         </ul>
                     </div>
                 </div>
