--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="css/style.css" />
   <title>CallPoint Landing Page</title>
 </head>
@@ -22,7 +23,7 @@
         <a href="#" class="nav-link">Features</a>
         <a href="#" class="nav-link">About Us</a>
         <a href="#" class="nav-link">Contact Us</a>
-        <a href="https://bit.ly/3LDCPbU" class="nav-link get-started" id="nav-linkget-started">Get Started</a>
+        <a href="https://bit.ly/3LDCPbU"target="_blank"class="nav-link get-started" id="nav-linkget-started">Get Started</a>
       </nav>
       <!-- Hamburger Icon -->
       <div class="hamburger">
@@ -41,11 +42,12 @@
           <h1>Grow Your Sales. Upgrade Your Customer Care.</h1>
           <p>Introducing CallPoint – Your Ultimate Business Line and Customer
             Care Solution</p>
-          <a href="https://bit.ly/3LDCPbU" class="cta-button">Get Started</a>
+        
         </div>
         <div class="home-image">
           <img src="img/picture1.jpg" alt="Business Communication" />
         </div>
+        <div class="bnt"><a href="https://bit.ly/3LDCPbU" target="_blank" class="cta-button">Get Started</a></div>
 
       </div>
     </section>
@@ -105,7 +107,7 @@
   <section class="why-us">
     <h3 class="center mb-2">Why us?</h3>
     <div class="why-us-content">
-      <div>
+      <div class="choose-callpoint">
         <h2 class="mb-2">Why Choose CallPoint</h2>
         <ul>
           <li>
@@ -129,12 +131,12 @@
           </li>
         </ul>
         <div class="mt-2">
-          <p>Contact Us: +123-455-7890</p>
+          <p>Contact Us: 020 13306058</p>
         </div>
       </div>
       <div class="cta-box">
         <img src="img/picture4.png" alt="Get Started" />
-        <a href="https://bit.ly/3LDCPbU" class="whycta-button">Get Started</a>
+        <a href="https://bit.ly/3LDCPbU"target="_blank"class="whycta-button">Get Started</a>
       </div>
     </div>
   </section>
@@ -164,8 +166,10 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="footer-content">
-      <div class="logo">
+      <div class="footer-logo">
         <img src="img/CallPointLogo-removebg-preview.png" alt="CallPoint Logo" />
+      </div>
+      <div class="footer-parag">
         <p>
           Join the growing number of businesses that trust CallPoint for
           their communication needs Whether you're scaling up or looking for
@@ -183,20 +187,22 @@
         <a href="associate.html">Associate</a>
       </div>
       <div>
-        <h3>Resources</h3>
+        <!-- <h3>Resources</h3>
         <p>xxxxxx</p>
         <p>xxxxxx</p>
-        <p>xxxxxx</p>
+        <p>xxxxxx</p> -->
       </div>
       <div class="contact">
         <h3>Contact</h3>
-        <p>Phone: +123-455-7890</p>
-        <p>Email: hello@callpoint360.com</p>
-        <p>Address: Gritford Centre, Bashorun Ibadan</p>
-        <div class="wwwmt-2"><a href="http://www.callpoint360.com">www.callpoint360.com</a></div>
+        <p><i class="fas fa-phone-alt"></i>020 13306058</p>
+        <p><i class="fas fa-envelope"></i>hello@callpoint360.com</p>
+        <p><i class="fas fa-map-marker-alt"></i>CallPoint CRM Hub, Gritford Centre,Adjacent Aare Arisekola House, Bashorun Ibadan</p>
+        <div class="wwwmt-2"><a href="http://www.callpoint360.com"><i class="fas fa-globe"></i> www.callpoint360.com</a></div>
       </div>
+      
     </div>
-    <p>© 2024 Copyright | Powered by Callpoint</p>
+    <p>&copy; 2024 Copyright | Examian Synergy</p>
+
   </footer>
   </div>
   <!-- JavaScript -->
