--- a/associate.html
+++ b/associate.html
@@ -29,7 +29,7 @@
                             <li><a href="https://bit.ly/46wPZRQ"target="_blank"><img src="img/Colloect_your_Money_2x-removebg-preview.png" alt="CYM Icon"> CYM</a></li>
                             <li><a href="https://bit.ly/3SzEGT3"target="_blank"><img src="img/Deployment-removebg-preview.png" alt="Deployment Icon"> Deployment</a></li>
                             <li><a href="https://bit.ly/3Wx0qjw"target="_blank"><img src="img/Payment-removebg-preview.png" alt="Payment Icon"> Payout</a></li>
-                            <li><a href=""target="_blank"><img src="img/download.png" alt="TA Icon"> TA</a></li>
+                            <li><a href="https://bit.ly/477a3dF"target="_blank"><img src="img/download.png" alt="TA Icon"> TA</a></li>
                         </ul>
                     </div>
                 </div>
