--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </div>
       <div class="cta-box">
-        <img src="/img/guy.jpg" alt="Get Started" />
+        <img src="img/guy.jpg" alt="Get Started" />
         <a href="https://bit.ly/3LDCPbU"target="_blank"class="whycta-button">Get Started</a>
       </div>
     </div>
