--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="hamburger">
         <span></span>
         <span></span>
-        <span></span>
+        <span></span> 
       </div>
 
 
@@ -175,13 +175,18 @@
           </p>
       </div>
       
-        <div class="social-media">
-            <h3>Follow Us On</h3>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-x"></i></a> 
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+      <div class="social-media">
+        <h3>Follow Us On</h3>
+        <div class="list">
+          <ul>
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-x"></i></a></li> 
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+        </ul>
         </div>
+        
+    </div>
         <div class="footer-links">
             <h3>Pages</h3>
             <a href="#">Home</a>
