--- a/associate.html
+++ b/associate.html
@@ -7,6 +7,7 @@
     <title>CallPoint</title>
     <link rel="stylesheet" href="css/associate.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200..1000&display=swap" rel="stylesheet">
 </head>
 
