--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
   <title>CallPoint Landing Page</title>
@@ -145,9 +145,9 @@
 
   <!-- Testimonials -->
   <section class="testimonials">
-    <h2 class="center">What Our Clients Say</h2>
+    <h2 class="center">What Our Client Says</h2>
     <div class="testimonial-grid">
-      <div class="testimonial-item">
+      <!-- <div class="testimonial-item">
         <p>"CallPoint has transformed our sales process. Our sale executives are more productive, and our conversions
           have skyrocketed!"</p>
         <p>– Jane D., Sales Manager</p>
@@ -156,11 +156,10 @@
         <p> "Our customer support team loves CallPoint. We can handle more queries in less time, and our customers are
           happier than ever."</p>
         <p>– John S., Support Team Lead</p>
-      </div>
+      </div> -->
       <div class="testimonial-item">
-        <p> "As a BPO, we need reliable communication tools. CallPoint’s IVR and call forwarding features are game
-          changers for us."</p>
-        <p>– Sarah L., Operations Manager</p>
+        <p> "Using Callpoint has helped my company in reducing wait times,making contact option flexible, cost saving and making our organization accessible 24/7."</p>
+        <p>– David Adeola., CEO Limelight Global Initiative Foundation</p>
       </div>
     </div>
   </section>
@@ -198,7 +197,7 @@
         </div>
         <div class="contact">
             <h3>Contact</h3>
-            <p><i class="fas fa-phone-alt"></i> <a href="tel:02013306058">020 13306058</a></p>
+            <p><i class="fas fa-phone"></i> <a href="tel:02013306058">020 13306058</a></p>
             <p><i class="fas fa-envelope"></i> <a href="mailto:hello@callpoint360.com">hello@callpoint360.com</a></p>
             <p><i class="fas fa-map-marker-alt"></i>CallPoint CRM Hub, Gritford Centre, Adjacent Aare Arisekola House, Bashorun Ibadan</p>
             <p class="wwwmt-2"><a href="http://www.callpoint360.com"><i class="fas fa-globe"></i> www.callpoint360.com</a></p>
