--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <a href="#" class="nav-link">Features</a>
         <a href="#" class="nav-link">About Us</a>
         <a href="#" class="nav-link">Contact Us</a>
-        <a href="https://bit.ly/3LDCPbU"target="_blank"class="nav-link get-started" id="nav-linkget-started">Get Started</a>
+        <a href="signup.html" class="nav-link">Signup</a>
+        <a href="paystake.html"target="_blank"class="nav-link get-started" id="nav-linkget-started">Make Payment</a>
+        <!-- <a href="https://bit.ly/3LDCPbU"target="_blank"class="nav-link get-started" id="nav-linkget-started">Get Started</a> -->
       </nav>
       <!-- Hamburger Icon -->
       <div class="hamburger">
@@ -50,6 +52,7 @@
           <img src="img/womancall.jpg" alt="Business Communication" />
         </div>
         <div class="bnt"><a href="https://bit.ly/3LDCPbU" target="_blank" class="cta-button">Get Started</a></div>
+
 
       </div>
     </section>
